# SentryRoom

./: .dockerignore  .env.example  .gitignore  DESIGN_NOTES.md  HARDWARE.md  LICENSE_NOTES.md  README.md  SAFETY.md  TESTING.md  docker-compose.yml  implementation.md  mosquitto.conf  vercel.json
.github/workflows/: ci.yml  web-pages.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: .dockerignore  Dockerfile  README.md  huggingface_space_README.md  render.yaml  requirements.txt  start.sh
backend/app/: __init__.py  auth.py  config.py  database.py  deployment_mode.py  main.py  mock_device.py  models.py  mqtt_client.py  safety.py  websocket_manager.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_calibration.py  test_deployment.py  test_events.py  test_health.py  test_safety.py  test_sentry_units.py  test_status.py  (+2 more)
docs/: api.md  architecture.md  assistant_integration.md  calibration.md  demo_modes.md  deployment_backend.md  deployment_web.md  design_system.md  desktop_app.md  hardware_wiring.md  mannequin_detection.md  materials_and_wiring.md  mobile_control.md  mqtt_topics.md  pin_map.md  remote_access.md  safety_model.md  virtual_hardware.md  web_pwa.md
firmware/: README.md
vision/: README.md  aruco_detect.py  mannequin_detect.py  marker_stream.py  requirements.txt  webcam_test.py
(+55 files in other folders)
