[package]
name = "sentinel-room"
version = "0.1.0"
description = "Sentinel Room desktop controller"
authors = ["Sentinel Room"]
edition = "2021"

[lib]
name = "sentinel_room_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
